# int4x4-to-fp16-linear

./: LICENSE  Makefile  README.md  pyproject.toml
tests/: test_quant.py
triton_int4/: bench.py  eval_wikitext2.py  quant_layer.py  quantize_model.py
triton_int4/quant/: quant_bench.py  quant_schemes.py
triton_int4/triton_kernels/: matmul_bf16_i4_pack8.py  quant_i4_pack8.py
