[tool.poetry]
name = "triton-int4-llm"
version = "0.1.0"
description = "Int4 quantization kernels and utilities"
authors = ["Alexey Khokhulin <alexei.khokhulin@gmail.com>"]
readme = "README.md"
packages = [{ include = "triton_int4" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^2.1.2"
torch = "^2.4.1"
triton = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
